--- a/hw/vfio/Makefile.objs
+++ b/hw/vfio/Makefile.objs
@@ -1,5 +1,6 @@
 obj-y += common.o spapr.o
 obj-$(CONFIG_VFIO_PCI) += pci.o pci-quirks.o display.o
+obj-y += clock-mmio.o
 obj-$(CONFIG_VFIO_CCW) += ccw.o
 obj-$(CONFIG_VFIO_PLATFORM) += platform.o
 obj-$(CONFIG_VFIO_XGMAC) += calxeda-xgmac.o
