--- a/hw/arm/Makefile.objs
+++ b/hw/arm/Makefile.objs
@@ -51,6 +51,8 @@ obj-$(CONFIG_MSF2) += msf2-soc.o
 obj-$(CONFIG_MUSCA) += musca.o
 obj-$(CONFIG_ARMSSE) += armsse.o
 obj-$(CONFIG_FSL_IMX7) += fsl-imx7.o mcimx7d-sabre.o
-obj-$(CONFIG_ARM_SMMUV3) += smmu-common.o smmuv3.o
+obj-$(CONFIG_ARM_SMMU_COMMON) += smmu-common.o
+obj-$(CONFIG_ARM_SMMUV2) += smmuv2.o
+obj-$(CONFIG_ARM_SMMUV3) += smmuv3.o
 obj-$(CONFIG_FSL_IMX6UL) += fsl-imx6ul.o mcimx6ul-evk.o
 obj-$(CONFIG_NRF51_SOC) += nrf51_soc.o
